--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <main>
-      <h1>Tela de login</h1>
+      <h1>CADASTRO</h1>
       <form class="container" id="formlogin" action="">
         <fieldset>
-          <legend>Insira seus dados para realizar o login</legend>
+          <legend></legend>
 
           <label for="fname">Nome:</label>
           <input
@@ -19,7 +19,12 @@
             name="fistname"
             id="fname"
             placeholder="Insira seu nome"
+            pattern="[A-Za-zÀ-ÿ\s]{1,}"
+            title="Nome deve conter apenas letras"
             autofocus
+            minlength="4"
+            maxlength="50"
+            required
           />
 
           <label for="lname">Sobrenome:</label>
@@ -28,16 +33,33 @@
             name="lastname"
             id="lname"
             placeholder="Insira seu sobrenome"
+            pattern="[A-Za-zÀ-ÿ\s]{1,}"
+            title="Sobrenome deve conter apenas letras"
+            required
+            minlength="4"
+            maxlength="50"
           />
 
           <label for="email">Email:</label>
-          <input type="email" name="email" id="email" placeholder="Seu email" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            placeholder="exemplo@dominio.com"
+            required
+          />
 
-          <label for="gender">Genero:</label>
-          <input type="radio" name="gender" id="male" value="male" />
-          <label for="male">Masculino</label>
-          <input type="radio" id="female" name="gender" value="female" />
-          <label for="female">Femenino</label><br /><br />
+          <label for="phone">Telefone:</label>
+          <input
+            type="tel"
+            id="phone"
+            name="phone"
+            placeholder="Seu telefone"
+            pattern="\([0-9]{2}\) [0-9]{4,5}-[0-9]{4}"
+            title="Digite um telefone válido no formato (XX) XXXXX-XXXX"
+            required
+          />
           <input type="submit" value="Enviar" />
           <input type="button" name="limpar" id="limpar" value="Limpar" />
         </fieldset>
